#--
# Copyright (c) 2004-2010 Mellanox Technologies LTD. All rights reserved.
#
# This software is available to you under a choice of one of two
# licenses.  You may choose to be licensed under the terms of the GNU
# General Public License (GPL) Version 2, available from the file
# COPYING in the main directory of this source tree, or the
# OpenIB.org BSD license below:
#
#     Redistribution and use in source and binary forms, with or
#     without modification, are permitted provided that the following
#     conditions are met:
#
#      - Redistributions of source code must retain the above
#        copyright notice, this list of conditions and the following
#        disclaimer.
#
#      - Redistributions in binary form must reproduce the above
#        copyright notice, this list of conditions and the following
#        disclaimer in the documentation and/or other materials
#        provided with the distribution.
#
# THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND,
# EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF
# MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND
# NONINFRINGEMENT. IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT HOLDERS
# BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY, WHETHER IN AN
# ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN
# CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
# SOFTWARE.
#--

dnl Process this file with autoconf to produce a configure script.

AC_INIT([ibdiag], [1.5.7.1], [openib-general@openib.org])
dnl use local config dir for extras
AC_CONFIG_AUX_DIR([config])

dnl Auto make
AM_INIT_AUTOMAKE( [foreign ] )

dnl Required for cases make defines a MAKE=make ??? Why
AC_PROG_MAKE_SET

dnl Provides control over re-making of all auto files
dnl We also use it to define swig dependencies so end
dnl users do not see them.
AM_MAINTAINER_MODE

dnl Checks for programs.
AC_PROG_INSTALL
AC_PROG_LN_S
AC_PROG_MAKE_SET

dnl For making dist we need not check any lib dependency
AC_ARG_ENABLE(libcheck,
[  --enable-libcheck    Enable Dependency Checking],
[case "${enableval}" in
  yes) libcheck=true ;;
  no)  libcheck=false ;;
  *) AC_MSG_ERROR(bad value ${enableval} for --enable-libcheck) ;;
esac],[libcheck=true])

if test $libcheck = true; then
dnl Checks for libraries.
CHECK_IBIS_EXEC_DIR
CHECK_IBDM_TCLLIB
SET_TK_LIBS
SET_GRAPHVIZ_LIBS
fi

dnl Create the following Makefiles
AC_OUTPUT(Makefile src/Makefile doc/Makefile)

