dnl Process this file with autoconf to produce a configure script.

AC_PREREQ(2.57)
AC_INIT(dapltest2, 1.2.1, dapl-devel@lists.sourceforge.net)
AC_CONFIG_SRCDIR([$top_srcdir/dapl/test/dapltest/cmd/dapl_main.c])
AC_CONFIG_AUX_DIR(config)
AM_CONFIG_HEADER(config.h)
AM_INIT_AUTOMAKE(dapltest2, 1.2.1)

AM_PROG_LIBTOOL

dnl Checks for programs
AC_PROG_CC

dnl Checks for libraries
if test "$disable_libcheck" != "yes"
then
AC_CHECK_LIB(pthread, pthread_attr_init, [],
    AC_MSG_ERROR([pthread_attr_init() not found,  dapltset requires pthreads]))
fi

dnl Checks for header files.

AC_CONFIG_FILES([Makefile])

AC_OUTPUT
