dnl Process this file with autoconf to produce a configure script.

AC_PREREQ(2.57)
AC_INIT(dtest, 2.0 dapl-devel@lists.sourceforge.net)
AC_CONFIG_SRCDIR([$top_srcdir/dapl/test/dtest/dtest.c])
AC_CONFIG_AUX_DIR(config)
AM_CONFIG_HEADER(config.h)
AM_INIT_AUTOMAKE(dtest, 2.0)

AM_PROG_LIBTOOL

dnl Checks for programs
AC_PROG_CC

dnl Checks for libraries

dnl Checks for header files.

AC_CONFIG_FILES([Makefile])

AC_OUTPUT
